--- a/stats-preview-card-component-main/stats-preview-card-component-main/styles.css
+++ b/stats-preview-card-component-main/stats-preview-card-component-main/styles.css
@@ -1,3 +1,83 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
+
+@import url("https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100..900&display=swap");
+
+/* .lexend-deca-<uniquifier > {
+  font-family: "Lexend Deca", serif;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
+  font-style: normal;
+} */
+
+/* .inter-<uniquifier > {
+  font-family: "Inter", serif;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
+  font-style: normal;
+} */
+
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+}
+
+* {
+  margin: 0;
+}
+
+* {
+  line-height: 1.5;
+}
+
+img,
+picture,
+video,
+canvas,
+svg {
+  display: block;
+  max-width: 100%;
+}
+
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  overflow-wrap: break-word;
+}
+
+p {
+  text-wrap: pretty;
+}
+
+body {
+  background: hsl(233, 47%, 7%);
+}
+
+.container {
+  width: 375px;
+  background-color: hsl(244, 38%, 16%);
+  color: hsl(0, 0%, 100%);
+  margin: 50px auto;
+}
+
+/* h2,
+p,
+div {
+  padding: 2rem;
+  font-size: 2rem;
+} */
+
 .attribution {
   font-size: 11px;
   text-align: center;
