--- a/stats-preview-card-component-main/stats-preview-card-component-main/styles.css
+++ b/stats-preview-card-component-main/stats-preview-card-component-main/styles.css
@@ -62,22 +62,80 @@ p {
 
 body {
   background: hsl(233, 47%, 7%);
+  font-family: "Inter", serif;
 }
 
 .container {
-  width: 375px;
+  width: 350px;
   background-color: hsl(244, 38%, 16%);
   color: hsl(0, 0%, 100%);
   margin: 50px auto;
+  text-align: center;
+  border-radius: 8px;
+  padding-bottom: 20px;
 }
 
-/* h2,
-p,
-div {
-  padding: 2rem;
-  font-size: 2rem;
-} */
+.img-container {
+  width: 100%;
+  height: 260px;
+  background-image: url("images/image-header-mobile.jpg");
+  background-size: cover;
+  position: relative;
+  overflow: hidden;
+  margin-bottom: 40px;
+  border-radius: 8px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
 
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: hsl(277, 64%, 61%, 0.5);
+}
+
+h2 {
+  font-size: 1.8rem;
+  max-width: 302px;
+  margin: 0 auto;
+  line-height: 1.1;
+  margin-bottom: 20px;
+}
+
+h2 span {
+  color: hsl(277, 64%, 61%);
+}
+
+p {
+  font-family: "Lexend Deca", serif;
+  color: hsla(0, 0%, 100%, 0.75);
+  font-weight: 250;
+  /* font-size: 15px; */
+  max-width: 269px;
+  margin: 0 auto;
+  margin-bottom: 40px;
+  line-height: 1.6;
+}
+
+.company-stats-sub-container {
+  margin-bottom: 25px;
+}
+
+.company-stats-number {
+  font-size: 1.6rem;
+  font-weight: 700;
+  margin-bottom: 2px;
+}
+
+.company-stats-factor {
+  color: hsla(0, 0%, 100%, 0.5);
+  font-size: 0.8rem;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+}
 .attribution {
   font-size: 11px;
   text-align: center;
