--- a/stats-preview-card-component-main/stats-preview-card-component-main/styles.css
+++ b/stats-preview-card-component-main/stats-preview-card-component-main/styles.css
@@ -104,6 +104,7 @@ p {
   margin: 0 auto;
   margin-bottom: 40px;
   line-height: 1.6;
+  text-align: center;
 }
 
 .company-stats-main-container {
@@ -142,7 +143,7 @@ p {
   .container {
     display: flex;
     max-width: 55%;
-    margin: 150px auto;
+    margin: 100px auto;
     border-radius: 8px;
     padding-bottom: 0;
   }
@@ -169,6 +170,7 @@ p {
     color: hsla(0, 0%, 100%, 0.6);
     margin: 0;
     margin-bottom: 45px;
+    text-align: left;
   }
 
   .img-container {
@@ -211,7 +213,7 @@ p {
     font-size: 11px;
     text-align: center;
     color: hsla(0, 0%, 100%, 0.6);
-    margin-top: -100px;
+    margin-top: -70px;
   }
   .attribution a {
     color: hsl(277, 64%, 61%);
