Centered the author's name in mobile version

--- a/3-column-preview-card-component-main/3-column-preview-card-component-main/src/styles.css
+++ b/3-column-preview-card-component-main/3-column-preview-card-component-main/src/styles.css
@@ -123,6 +123,7 @@ p {
 .attribution {
   font-size: 10px;
   margin: 0 auto;
+  text-align: center;
   color: hsl(31, 77%, 52%);
 }
 .attribution a {
