Changed desktop breakpoint

--- a/3-column-preview-card-component-main/3-column-preview-card-component-main/src/styles.css
+++ b/3-column-preview-card-component-main/3-column-preview-card-component-main/src/styles.css
@@ -131,7 +131,7 @@ p {
   text-decoration: none;
 }
 
-@media (max-width: 1440px) {
+@media (min-width: 760px) {
   main {
     display: flex;
     width: 67%;
