--- a/blog-preview-card-main/blog-preview-card-main/styles.css
+++ b/blog-preview-card-main/blog-preview-card-main/styles.css
@@ -1,3 +1,84 @@
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+}
+
+* {
+  margin: 0;
+}
+
+* {
+  line-height: 1.5;
+}
+
+img,
+picture,
+video,
+canvas,
+svg {
+  display: block;
+  max-width: 100%;
+}
+
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  overflow-wrap: break-word;
+}
+
+p {
+  text-wrap: pretty;
+}
+
+body {
+  background-color: hsl(47, 88%, 63%);
+  font-family: "Figtree", sans-serif;
+}
+
+main {
+  width: 345px;
+  margin: 100px auto;
+  background-color: hsl(0, 0%, 100%);
+  padding: 25px;
+  border-radius: 20px;
+  border: 1px solid black;
+}
+
+.learning {
+  width: 90px;
+  margin-top: 25px;
+  text-align: center;
+  font-weight: 800;
+  font-size: 15px;
+  padding: 3px 5px 3px 5px;
+  border-radius: 4px;
+
+  background-color: hsl(47, 88%, 63%);
+  color: hsl(0, 0%, 7%);
+}
+
+.publish-date {
+  margin-top: 13px;
+  font-size: 14px;
+}
+
+.main-image {
+  width: 100%;
+  border-radius: 11px;
+}
+
 .attribution {
   font-size: 11px;
   text-align: center;
