--- a/blog-preview-card-main/blog-preview-card-main/styles.css
+++ b/blog-preview-card-main/blog-preview-card-main/styles.css
@@ -48,12 +48,18 @@ body {
 }
 
 main {
-  width: 345px;
+  width: 375px;
   margin: 100px auto;
   background-color: hsl(0, 0%, 100%);
   padding: 25px;
+  box-shadow: 10px 10px;
   border-radius: 20px;
   border: 1px solid black;
+}
+
+.main-image {
+  width: 100%;
+  border-radius: 13px;
 }
 
 .learning {
@@ -64,19 +70,41 @@ main {
   font-size: 15px;
   padding: 3px 5px 3px 5px;
   border-radius: 4px;
-
   background-color: hsl(47, 88%, 63%);
   color: hsl(0, 0%, 7%);
 }
 
 .publish-date {
-  margin-top: 13px;
+  margin: 15px 0 16px 0;
   font-size: 14px;
 }
 
-.main-image {
-  width: 100%;
-  border-radius: 11px;
+.course {
+  font-size: 22px;
+  font-weight: 800;
+  margin-bottom: 13px;
+  color: hsl(0, 0%, 7%);
+}
+
+.explanation {
+  color: hsl(0, 0%, 42%);
+  font-weight: 500;
+  margin-bottom: 25px;
+}
+
+.author {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+
+.author img {
+  width: 40px;
+  height: 40px;
+}
+
+.author p {
+  font-weight: 800;
 }
 
 .attribution {
