--- a/blog-preview-card-main/blog-preview-card-main/styles.css
+++ b/blog-preview-card-main/blog-preview-card-main/styles.css
@@ -48,12 +48,12 @@ body {
 }
 
 main {
-  width: 360px;
+  width: 375px;
   margin: 150px auto;
   background-color: hsl(0, 0%, 100%);
-  padding: 25px;
+  padding: 22px;
   box-shadow: 10px 10px;
-  border-radius: 20px;
+  border-radius: 18px;
   border: 1px solid black;
 }
 
@@ -84,6 +84,10 @@ main {
   font-weight: 800;
   margin-bottom: 13px;
   color: hsl(0, 0%, 7%);
+}
+
+.course:active {
+  color: hsl(47, 88%, 63%);
 }
 
 .explanation {
