--- a/nft-preview-card-component-main/nft-preview-card-component-main/styles.css
+++ b/nft-preview-card-component-main/nft-preview-card-component-main/styles.css
@@ -52,13 +52,17 @@ body {
   width: 90%;
   margin: 30% auto;
   background-color: hsl(216, 50%, 16%);
-  padding: 27px;
+  padding: 26px;
   border-radius: 14px;
 }
 
 .equilibrium-image {
   width: 100%;
   border-radius: 9px;
+}
+
+.equilibrium-image:active {
+  background-color: hsl(178, 100%, 50%);
 }
 
 .equilibrium-number {
@@ -118,6 +122,12 @@ hr {
   color: hsl(178, 100%, 50%);
 }
 
+@media (max-width: 1440px) {
+  .container {
+    max-width: 26%;
+    margin: 5% auto;
+  }
+}
 .attribution {
   font-size: 12px;
   text-align: center;
