--- a/nft-preview-card-component-main/nft-preview-card-component-main/styles.css
+++ b/nft-preview-card-component-main/nft-preview-card-component-main/styles.css
@@ -122,7 +122,7 @@ hr {
   color: hsl(178, 100%, 50%);
 }
 
-@media (max-width: 1440px) {
+@media (min-width: 768px) {
   .container {
     max-width: 26%;
     margin: 5% auto;
