--- a/order-summary-component-main/order-summary-component-main/styles.css
+++ b/order-summary-component-main/order-summary-component-main/styles.css
@@ -44,6 +44,7 @@ p {
 
 body {
   background-image: url("images/pattern-background-mobile.svg");
+  background-repeat: no-repeat;
   background-color: hsl(225, 100%, 94%);
   font-family: "Red Hat Display", sans-serif;
   color: hsl(223, 47%, 23%);
